Actions
Bug #13874
closedSMB durable handle reclaim lease sometimes fails
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
While investigating another problem we noticed that when more than one durable handle shares a lease, only one of them (the lease owner) can be reclaimed.
Updated by Gordon Ross 11 months ago
The error here is from something missed when leases were added.
In the function smb_dh_should_save, we need to look at the state of
the lease when a durable handle has a lease. When a DH has a lease,
the oplock "grant" is stored in the lease (ls_state) and when the DH
is an ordinary oplock, the "grant" is in f_oplock.og_state (simple fix).
Updated by Gordon Ross 10 months ago
Tested with the smbtorture test case "smb2.lease.durable_upgrade" (now passes)
Updated by Electric Monk 10 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 0ce4dc6f60780f39ce4f196fc1b9804379141eb7
commit 0ce4dc6f60780f39ce4f196fc1b9804379141eb7 Author: Gordon Ross <gordon.ross@tintri.com> Date: 2021-07-15T19:43:31.000Z 13874 SMB durable handle reclaim lease sometimes fails Reviewed by: Matt Barden <mbarden@tintri.com> Reviewed by: Prashanth Badari <prbadari@tintri.com> Reviewed by: Andrew Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions