13874 SMB durable handle reclaim lease sometimes fails Reviewed by: Matt Barden <mbarden@tintri.com> Reviewed by: Prashanth Badari <prbadari@tintri.com> Reviewed by: Andrew Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Garrett D'Amore <garrett@damore.org>